--- a/css/style.css
+++ b/css/style.css
@@ -136,11 +136,17 @@ main {
 }
 
 footer {
-    margin: 3em 0;
+    margin: 6em 0 1em 0;
+    text-align: center;
+} 
+
+footer p {
+    font-size: 0.9em;
+    opacity: 0.5;
 }
 
+
 .giphylogo {
-    margin-top: 3em;
     width: 180px; 
     max-width: 40vw;
 }
