--- a/css/style_alt.css
+++ b/css/style_alt.css
@@ -81,6 +81,7 @@ input {
     border: solid 2px #81A594;
     outline: none;
     border-radius: 1.5em; 
+    box-shadow: inset 0 0 0;
     background: #E6E6DC;
     width: 76%;
     height: 2.5em;
