--- a/css/style_alt.css
+++ b/css/style_alt.css
@@ -78,10 +78,10 @@ h1 {
 }
 
 input {
+    -webkit-appearance: none;
     border: solid 2px #81A594;
     outline: none;
     border-radius: 1.5em; 
-    box-shadow: inset 0 0 0;
     background: #E6E6DC;
     width: 76%;
     height: 2.5em;
